# window-agent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  P2P-DECISION.md  P2P-PLAN.md  PLAN.md  README.md  REFACTORING.md  SPEC.md  build.ps1  dev.ps1  package-lock.json  package.json  pnpm-lock.yaml  verify.sh  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
browser-sidecar/: package-lock.json  package.json  server.js
browser-sidecar/test/: snapshot.test.js
docs/: CONCEPT.md  README.ko.md  ROADMAP.md  TODO-persona-system.md  ui-redesign-guidelines.md
docs/design/: obsidian-memory-system.md
docs/spec/: agent.md  browser.md  conversation.md  cron.md  database.md  frontend.md  index.md  memory.md  network.md  settings.md  team.md
plans/: consensus-codebase-refactoring.md  consensus-i18n-migration.md  consensus-node-exe-placeholder.md  consensus-p2p-agent-network.md  consensus-p2p-direct-connect.md  consensus-recursive-memory.md  consensus-remove-migration-code.md  consensus-vault-ui.md
plans/archive/: agent-skills-plan.md  consensus-agent-team.md  consensus-learning-mode.md  consensus-manager-persona.md  consensus-vault-empty-state.md  phase4-tool-platform-plan.md  tool-run-visibility-plan.md
relay-server/: .env.example  Cargo.toml
relay-server/src/: api.rs  auth.rs  db.rs  hub_db.rs  lib.rs  main.rs  state.rs  web.rs  ws.rs
relay-server/templates/: agent_detail.html  agents.html  base.html  landing.html  login.html  note_detail.html  notes.html  register.html  skill_detail.html  skills.html  user_profile.html
relay-server/tests/: integration.rs
scripts/: prepare-chromium.cjs
shared/: Cargo.toml
shared/src/: community.rs  encrypted_envelope.rs  lib.rs  protocol.rs
src/: App.css  App.tsx  constants.ts  index.css  labels.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/agents/analyst-lee/: identity.md  instructions.md  soul.md
src-tauri/data/agents/automator-yoon/: identity.md  instructions.md  soul.md
src-tauri/data/agents/designer-han/: identity.md  instructions.md  soul.md
src-tauri/data/agents/developer-park/: identity.md  instructions.md  soul.md
src-tauri/data/agents/planner-choi/: identity.md  instructions.md  soul.md
src-tauri/data/agents/researcher-jung/: identity.md  instructions.md  soul.md
src-tauri/data/agents/secretary-kim/: identity.md  instructions.md  soul.md
src-tauri/data/agents/sysadmin-kang/: identity.md  instructions.md  soul.md
src-tauri/resources/: bootstrap.md
src-tauri/resources/default-agent/: AGENTS.md  IDENTITY.md  SOUL.md  TOOLS.md  TOOL_CONFIG.json  USER.md
src-tauri/resources/en/: bootstrap.md
src-tauri/resources/en/default-agent/: AGENTS.md  BOOT.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  USER.md
src-tauri/resources/ko/default-agent/: AGENTS.md  BOOT.md  HEARTBEAT.md  IDENTITY.md  SOUL.md
src-tauri/resources/shared/default-agent/: TOOL_CONFIG.json
src-tauri/src/: api.rs  browser.rs  error.rs  lib.rs  main.rs  settings.rs
src-tauri/src/agents/: collaboration.rs  mod.rs  prompts.rs  runner.rs  scheduler.rs  secretary.rs  seed.rs
src-tauri/src/ai/: backend.rs  claude.rs  factory.rs  mod.rs  ollama.rs  openai.rs  types.rs
src-tauri/src/browser/: commands.rs  mod.rs  screenshot.rs  security.rs  session.rs  sidecar.rs
src-tauri/src/commands/: agent_commands.rs  ai_commands.rs  api_commands.rs  chat_commands.rs  collaboration_commands.rs  config_commands.rs  cost_commands.rs  credential_commands.rs  cron_commands.rs  evaluation_commands.rs  export_commands.rs  hr_commands.rs  hub_commands.rs  leave_commands.rs  marketplace_commands.rs  mod.rs  orgchart_commands.rs  p2p_commands.rs  permission_commands.rs  relay_commands.rs  report_commands.rs  schedule_commands.rs  skill_commands.rs  task_commands.rs  team_commands.rs  tool_commands.rs  vault_commands.rs
src-tauri/src/commands/tool_commands/: config.rs  dispatcher.rs  execution.rs  file_tools.rs  http.rs  mod.rs  schema.rs  scope.rs  self_tools.rs  shell_tools.rs
src-tauri/src/db/: agent_operations.rs  cron_operations.rs  error.rs  migrations.rs  mod.rs  models.rs  operations.rs  schema.rs  team_operations.rs
src-tauri/src/db/operations/: consolidation_ops.rs  conversation_ops.rs  import_ops.rs  message_ops.rs  mod.rs  summary_ops.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/models/: api_types.rs
src-tauri/src/p2p/: capability.rs  contact_card.rs  db.rs  envelope.rs  identity.rs  invite.rs  manager.rs  mod.rs  protocol.rs  relay_client.rs  secretary.rs  security.rs  transport.rs
src-tauri/src/p2p/manager/: event_loop.rs  helpers.rs  mod.rs
src-tauri/src/relay/: capability.rs  contact_card.rs  crypto.rs  db.rs  envelope.rs  identity.rs  invite.rs  relay_client.rs  secretary.rs
src-tauri/src/relay/db/: contacts.rs  messages.rs  mod.rs  outbox.rs  threads.rs
src-tauri/src/relay/manager/: event_loop.rs  lifecycle.rs  messaging.rs  mod.rs  peers.rs
src-tauri/src/services/: actor_context.rs  api_service.rs  credential_service.rs  cron_scheduler.rs  hub_client.rs  llm_helpers.rs  marketplace_service.rs  mod.rs  skill_service.rs  team_orchestrator.rs  team_synthesis.rs  team_tasks.rs
src-tauri/src/tools/: browser_manager.rs  browser_tools.rs  file_tools.rs  mod.rs  permissions.rs  process_tools.rs  web_tools.rs
src-tauri/src/tools/saas/: confluence.rs  jira.rs  mod.rs  notion.rs
src-tauri/src/utils/: config_helpers.rs  http.rs  mod.rs  path_security.rs  tool_migration.rs
src-tauri/src/vault/: graph.rs  links.rs  manager.rs  migration.rs  mod.rs  note.rs  note_registry.rs  search.rs  security.rs  watcher.rs
src/__tests__/: setup.ts  testFactories.ts
src/data/: agentTemplates.ts
src/hooks/: useAgentEditor.ts  useAttachmentSrc.ts  useChatInputLogic.ts  useClipboardFeedback.ts  useCompositionInput.ts  useDragRegion.ts  useLabels.ts  useLoadOnOpen.ts  useMessageScroll.ts
src/i18n/: config.ts  index.ts  themeVars.ts
src/lib/: avatar.ts  utils.ts
src/pages/: ChatPage.tsx  DashboardPage.tsx  HRPage.tsx  OrgChartPage.tsx  ReportsPage.tsx  (+2 more)
(+319 files in other folders)
