[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
wa-shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
dotenvy = "0.15"

# Community Hub
argon2 = "0.5"
jsonwebtoken = "9"
pulldown-cmark = "0.12"
ammonia = "3"
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.6", features = ["cors", "limit"] }

[dev-dependencies]
tokio-tungstenite = "0.26"
wa-shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde_json = "1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
