[package]
name = "tauri-app"
version = "0.7.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "0.22"
which = "7"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["sync", "rt", "time", "io-util", "io-std", "macros", "rt-multi-thread"] }
futures = "0.3"
tauri-plugin-store = "2"
zip = "2"
serde_yaml = "0.9"
url = "2"
urlencoding = "2.1.3"
regex = "1"
notify = { version = "7", features = ["macos_fsevent"] }
walkdir = "2"
sha2 = "0.10"
wa-shared = { path = "../shared" }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cron = "0.12"

[dev-dependencies]
tempfile = "3"

